# python-eureka-client

./: .gitignore  LICENSE  README.md  README.zh_cn.md  pyproject.toml  requirements.txt  setup.py  upload.sh
py_eureka_client/: __aws_ec2_metadata_loader.py  __aws_info_loader.py  __dns_txt_resolver.py  __init__.py  __logger__.py  __netint_utils.py  __urlopen_proxy__.py  eureka_basic.py  eureka_client.py  http_client.py  logger.py  netint_utils.py
tests/py_eureka_client/: EurekaServerParseTest.py  eureka_server_parse_test.py  net_int_test.py  test_http_basic_auth.py
